k8s/home-assistant/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  serviceName: "home-assistant"
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      # Workaround since home assistant puts configuration, data and logs
      # in the same directory without any option to customize.
      containers:
      - name: home-assistant
        resources:
          limits:
            memory: 1Gi
            cpu: 100m
        image: ghcr.io/home-assistant/home-assistant:2022.12
        ports:
        - containerPort: 8123
          name: home-assistant
        securityContext:
          privileged: true
        volumeMounts:
          - name: home-assistant-data
            mountPath: /config
          - mountPath: /dev/ttyACM0
            name: sonoff
      volumes:
      - name: home-assistant-config
        configMap:
          name: home-assistant-config
      - name: sonoff
        hostPath:
          path: /dev/ttyACM0
  volumeClaimTemplates:
  - metadata:
      name: home-assistant-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  ports:
  - port: 80
    targetPort: home-assistant
    name: home-assistant
  selector:
    app: home-assistant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  rules:
  - host: assistant.vassast.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              name: home-assistant
